--- a/src/App.css
+++ b/src/App.css
@@ -10,5 +10,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #00ff88ff;
+  /* background-color: #00ff88ff; */
+  background-image: url("/public/background/room.png")
 }
