--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -50,10 +50,10 @@
 .BoxSideMenu {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 16px;
   padding: 16px;
-  height: 400px; /* ou a altura que preferir */
+  height: 400px;
   overflow-y: auto;
   background: linear-gradient(135deg, #d32f2f 0%, #800020 50%, #2b001f 100%);
   border-radius: 12px;
@@ -129,6 +129,7 @@
   width: 70px;
   height: 70px;
   cursor: grab;
+  user-select: none;
   transition: transform 0.2s ease;
 }
 .stickerInsideBox:hover {
@@ -249,6 +250,15 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+.textInsideBox {
+  user-select: none;
+  z-index: 10;
+}
+
+.textInsideBox:hover {
+  box-shadow: 0 0 0 2px rgba(25, 118, 210, 0.5);
 }
 
 /*# sourceMappingURL=Main.module.css.map */
